--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-icons": "^4.10.1",
     "swiper": "^10.1.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.0"
   }
 }
